finally fixed the white space and some minor corrections

--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ h2{
     display:flex;
     align-items:center;
     justify-content:space-between;
-    padding:100px;
+    padding:125px;
 
 }
 .box{
